fix: set playkit container overflow to not cut the widget

--- a/src/style.scss
+++ b/src/style.scss
@@ -29,6 +29,10 @@
     }
 }
 
+.playkit-floating-container.playkit-floating-container {
+    overflow: visible;
+}
+
 .annoto-playkit-plugin-iframe-embed-fix,
 .annoto-playkit-plugin-iframe-embed-fix body {
     overflow: hidden;
